--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -48,7 +48,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a class="navbar-brand" href="index.html">SB Admin v2.0</a>
+                
             </div>
             <!-- /.navbar-header -->
 
@@ -72,7 +72,10 @@
                         </li>
                         
                         <li>
-                            <a href="metrics.html"><i class="fa fa-tint" aria-hidden="true"></i> Metrics</a>
+                            <a href="metrics.html"><i class="fa fa-tint fa-fw" aria-hidden="true"></i> Metrics</a>
+                        </li>
+                        <li>
+                            <a href="setup.html"><i class="fa fa-edit fa-fw"></i> Setup</a>
                         </li>
                         <li>
                             <a href="forms.html"><i class="fa fa-edit fa-fw"></i> Forms</a>
