Changed the stickers

--- a/template/pages/metrics.html
+++ b/template/pages/metrics.html
@@ -140,11 +140,11 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-shopping-cart fa-5x"></i>
+                                    <i class="fa fa-pagelines fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
-                                    <div class="huge">124</div>
-                                    <div>New Orders!</div>
+                                    <div class="huge">6</div>
+                                    <div>Types of Crops</div>
                                 </div>
                             </div>
                         </div>
@@ -161,11 +161,11 @@
                         <div class="panel-heading">
                             <div class="row">
                                 <div class="col-xs-3">
-                                    <i class="fa fa-support fa-5x"></i>
+                                    <i class="fa fa-expand fa-5x"></i>
                                 </div>
                                 <div class="col-xs-9 text-right">
                                     <div class="huge">13</div>
-                                    <div>Support Tickets!</div>
+                                    <div>Acres of Farmland</div>
                                 </div>
                             </div>
                         </div>
@@ -199,7 +199,7 @@
                                         </li>
                                         <li class="divider"></li>
                                         <li><a href="#">Separated link</a>
-                                        </li>
+                                        </li>   
                                     </ul>
                                 </div>
                             </div>
