--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -91,8 +91,9 @@
                             <i class="fa fa-tint" aria-hidden="true"></i> Precipitation
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <img src="../images/Weather.png">
+                        <div class="panel-body container"><div class="col-md-7">
+                            <img src="../images/Weather.png" class="img-responsive">
+                            </div>
                         </div>
                         <!-- /.panel-body -->
                     </div>
