--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -47,17 +47,6 @@
             <div class="navbar-default sidebar" role="navigation">
                 <div class="sidebar-nav navbar-collapse">
                     <ul class="nav" id="side-menu">
-                        <li class="sidebar-search">
-                            <div class="input-group custom-search-form">
-                                <input type="text" class="form-control" placeholder="Search...">
-                                <span class="input-group-btn">
-                                <button class="btn btn-default" type="button">
-                                    <i class="fa fa-search"></i>
-                                </button>
-                            </span>
-                            </div>
-                            <!-- /input-group -->
-                        </li>
                         <li>
                             <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
                         </li>
@@ -91,7 +80,7 @@
                             <i class="fa fa-tint" aria-hidden="true"></i> Precipitation
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body container"><div class="col-md-7">
+                        <div class="panel-body container"><div class="col-sm-3 col-md-7 col-lg-10">
                             <img src="../images/Weather.png" class="img-responsive">
                             </div>
                         </div>
