--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -80,7 +80,7 @@
                             <i class="fa fa-tint" aria-hidden="true"></i> Precipitation
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body container"><div class="col-sm-3 col-md-7 col-lg-10">
+                        <div class="panel-body "><div class="col-sm-12 col-md-7 col-lg-10">
                             <img src="../images/Weather.png" class="img-responsive">
                             </div>
                         </div>
