--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -41,28 +41,25 @@
 
     <div id="wrapper">
 
+        <div class="navbar-default sidebar" role="navigation">
+            <div class="sidebar-nav navbar-collapse">
+                <ul class="nav" id="side-menu">
+                    <li>
+                        <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
+                    </li>
 
+                    <li>
+                        <a href="metrics.html"><i class="fa fa-tint fa-fw" aria-hidden="true"></i> Metrics</a>
+                    </li>
+                    <li>
+                        <a href="setup.html"><i class="fa fa-edit fa-fw"></i> Setup</a>
+                    </li>
 
-           
-            <div class="navbar-default sidebar" role="navigation">
-                <div class="sidebar-nav navbar-collapse">
-                    <ul class="nav" id="side-menu">
-                        <li>
-                            <a href="index.html"><i class="fa fa-dashboard fa-fw"></i> Dashboard</a>
-                        </li>
-                        
-                        <li>
-                            <a href="metrics.html"><i class="fa fa-tint fa-fw" aria-hidden="true"></i> Metrics</a>
-                        </li>
-                        <li>
-                            <a href="setup.html"><i class="fa fa-edit fa-fw"></i> Setup</a>
-                        </li>
-                       
-                    </ul>
-                </div>
-                <!-- /.sidebar-collapse -->
+                </ul>
             </div>
-            <!-- /.navbar-static-side -->
+            <!-- /.sidebar-collapse -->
+        </div>
+        <!-- /.navbar-static-side -->
         </nav>
 
         <div id="page-wrapper">
@@ -80,8 +77,9 @@
                             <i class="fa fa-tint" aria-hidden="true"></i> Precipitation
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body "><div class="col-sm-12 col-md-12 col-lg-12">
-                            <img src="../images/Weather.png" class="img-responsive">
+                        <div class="panel-body ">
+                            <div class="col-sm-12 col-md-12 col-lg-12">
+                                <img src="../images/Weather.png" class="img-responsive">
                             </div>
                         </div>
                         <!-- /.panel-body -->
@@ -91,7 +89,7 @@
                         <div class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> Crop Status Monitor
                             <div class="pull-right">
-                                <div class="btn-group">                                
+                                <div class="btn-group">
                                     <ul class="dropdown-menu pull-right" role="menu">
                                         <li><a href="#">Action</a>
                                         </li>
@@ -112,7 +110,7 @@
                                 <div class="col-lg-4">
                                     <div class="table-responsive">
                                         <table class="table table-bordered table-hover table-striped">
-                                            
+
                                         </table>
                                     </div>
                                     <!-- /.table-responsive -->
@@ -126,69 +124,66 @@
                             <!-- /.row -->
                         </div>
                         <!-- /.panel-body -->
-                    </div>                    
+                    </div>
                     <!-- /.panel -->
                 </div>
                 <!-- /.col-lg-8 -->
                 <div class="col-lg-4">
                     <div class="panel panel-default">
                         <div class="panel-heading">
-                            <i class="fa fa-bell fa-fw"></i> Notifications Panel
+                            <i class="fa fa-bell fa-fw"></i> Overview
                         </div>
                         <!-- /.panel-heading -->
                         <div class="panel-body">
                             <div class="list-group">
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-comment fa-fw"></i> New Comment
-                                    <span class="pull-right text-muted small"><em>4 minutes ago</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Pump 1 On
+                                    <span class="pull-right text-muted small"><em>Started 4 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-twitter fa-fw"></i> 3 New Followers
-                                    <span class="pull-right text-muted small"><em>12 minutes ago</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Pump 2 On
+                                    <span class="pull-right text-muted small"><em>Started 25 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-envelope fa-fw"></i> Message Sent
-                                    <span class="pull-right text-muted small"><em>27 minutes ago</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Pump 3 On
+                                    <span class="pull-right text-muted small"><em>Started 27 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-tasks fa-fw"></i> New Task
-                                    <span class="pull-right text-muted small"><em>43 minutes ago</em>
+                                    <i class="fa fa-times-circle" aria-hidden="true"></i> Pump 4 Off
+                                    <span class="pull-right text-muted small"><em>Stopped 2 minutes ago</em>
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-upload fa-fw"></i> Server Rebooted
-                                    <span class="pull-right text-muted small"><em>11:32 AM</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Pump 5 On
+                                    <span class="pull-right text-muted small"><em>Started 15 minutes ago</em>
+                                    </span>
+                                </a>
+
+                            </div>
+                            <div class="list-group">
+                                <a href="#" class="list-group-item">
+                                    <i class="fa fa-exclamation-circle" aria-hidden="true"></i> Moisture content sensor 1 error
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-bolt fa-fw"></i> Server Crashed!
-                                    <span class="pull-right text-muted small"><em>11:13 AM</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Moisture content sensor 2 OK
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-warning fa-fw"></i> Server Not Responding
-                                    <span class="pull-right text-muted small"><em>10:57 AM</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Moisture content sensor 3 OK
                                     </span>
                                 </a>
                                 <a href="#" class="list-group-item">
-                                    <i class="fa fa-shopping-cart fa-fw"></i> New Order Placed
-                                    <span class="pull-right text-muted small"><em>9:49 AM</em>
-                                    </span>
-                                </a>
-                                <a href="#" class="list-group-item">
-                                    <i class="fa fa-money fa-fw"></i> Payment Received
-                                    <span class="pull-right text-muted small"><em>Yesterday</em>
+                                    <i class="fa fa-check-circle" aria-hidden="true"></i> Moisture content sensor 4 OK
                                     </span>
                                 </a>
                             </div>
-                            <!-- /.list-group -->
-                            <a href="#" class="btn btn-default btn-block">View All Alerts</a>
                         </div>
                         <!-- /.panel-body -->
-                    </div>                    
+                    </div>
                     <!-- /.panel .chat-panel -->
                 </div>
                 <!-- /.col-lg-4 -->
