Changed the monitr

--- a/template/pages/index.html
+++ b/template/pages/index.html
@@ -88,42 +88,14 @@
                     <div class="panel panel-default">
                         <div class="panel-heading">
                             <i class="fa fa-bar-chart-o fa-fw"></i> Crop Status Monitor
-                            <div class="pull-right">
-                                <div class="btn-group">
-                                    <ul class="dropdown-menu pull-right" role="menu">
-                                        <li><a href="#">Action</a>
-                                        </li>
-                                        <li><a href="#">Another action</a>
-                                        </li>
-                                        <li><a href="#">Something else here</a>
-                                        </li>
-                                        <li class="divider"></li>
-                                        <li><a href="#">Separated link</a>
-                                        </li>
-                                    </ul>
-                                </div>
+                            <div class="pull-right">                            
                             </div>
                         </div>
                         <!-- /.panel-heading -->
-                        <div class="panel-body">
-                            <div class="row">
-                                <div class="col-lg-4">
-                                    <div class="table-responsive">
-                                        <table class="table table-bordered table-hover table-striped">
-
-                                        </table>
-                                    </div>
-                                    <!-- /.table-responsive -->
-                                </div>
-                                <!-- /.col-lg-4 (nested) -->
-                                <div class="col-lg-8">
-                                    <div id="morris-bar-chart"></div>
-                                </div>
-                                <!-- /.col-lg-8 (nested) -->
+                            <div class="panel-body "><div class="col-sm-12 col-md-12 col-lg-12">
+                            <img src="https://vignette.wikia.nocookie.net/smallville/images/0/0e/Work_in_progress.svg/revision/latest?cb=20080301205327" class="img-responsive">
                             </div>
-                            <!-- /.row -->
                         </div>
-                        <!-- /.panel-body -->
                     </div>
                     <!-- /.panel -->
                 </div>
